@@ -1,5 +1,8 @@
 2005-11-02  Han-Wen Nienhuys  <hanwen@xs4all.nl>
 
+	* lily/rest-collision.cc (force_shift_callback_rest): change to
+	chained callback.
+
 	* lily/rest.cc (y_offset_callback): merge function of 3 callbacks. 
 
 	* lily/grob.cc (y_parent_positioning): remove axis argument from
